refactor: simplify charset handling
Use StandardCharsets and Charset instead of checked encoding names for UTF-8, URL, Shift_JIS, and socket decoding paths. Add round-trip tests that pin the observable wire formats while removing unreachable UnsupportedEncodingException branches.